--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
 <meta charset="utf-8">
 <link type="text/css" rel="stylesheet" href="/assets/stylesheets/application.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,600|Pathway+Gothic+One" rel="stylesheet">
 <!-- <script type="text/javascript" src="assets/scripts/application.js"></script> -->
