Estilos para footer y sticky footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@ layout: compress
 	</head>
 	<body>
 		{% include header.html %}
-		{{ content }}
+		<main>
+			{{ content }}
+		</main>
 		{% include footer.html %}
 	</body>
 </html>
