Adaptación de footer y header al nuevo logo y newsletter

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,10 @@
 		<p>info@psiconueve.es</p>
 		<p>695 642 851</p>
 	</address>
-	<p class="copyright">&copy; Todos los derechos reservados</p>
+	<div class="newsletter">
+		<h4>Subscríbete a nuestro newsletter!</h4>
+		<form>
+			<input type="email" name="email" placeholder="Introduce tu e-mail"/><input type="submit" value="OK"/>
+		</form>
+	</div>
 </footer>
