Animación en botón menú launcher

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -7,7 +7,8 @@ $gothic: 'Pathway Gothic One', sans-serif;
 $white: #FFFFFF;
 $black0: #444444;
 $black1: #333333;
-$black2: #000000;
+$black2: #1a1a1a;
+$black3: #000000;
 $grey0: #f7f7f7;
 $grey1: #ededed;
 $grey2: #e5e5e5;
