--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,20 @@
 <header>
-	<div class="logo"></div>
-	<div class="menu-launcher"></div>
-	<!-- <div class="menu-fs">
-		<div class="logo"></div>
-			<nav class="menu-options">
-				<ul>
-					<li>
-
-
-				</ul>
-			</nav>
-	</div> -->
+	<a href="/" class="logo"></a>
+	<button class="menu-launcher">
+		<span class="menu-bar"></span>
+	</button>
 </header>
+<div class="menu-fs">
+	<nav class="menu-options">
+		<ul>
+			<li><a href="/nuestra_filosofia.html">Nuestra Filosofía</a></li>
+			<li><a href="/areas_intervencion.html">Áreas de Intervención</a></li>
+			<li><a href="/metodologia.html">Metodología</a></li>
+			<li><a href="/quienes_somos.html">Quiénes Somos</a></li>
+			<li><a href="/servicios.html">Servicios</a></li>
+			<li><a href="/cursos_talleres.html">Cursos y Talleres</a></li>
+			<li><a href="/preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
+			<li><a href="/contacto.html">Contacto</a></li>
+		</ul>
+	</nav>
+</div>
