--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -19,6 +19,7 @@ header {
 	align-items: center;
 	padding: .5em 2em;
 	background: $white;
+	z-index: 1001;
 	* {
 		cursor: pointer;
 	}
@@ -27,9 +28,101 @@ header {
 		transform: translateY(.05em);
 	}
 	.menu-launcher {
-		background: url("../images/menu-launcher.svg") no-repeat center;
-		width: 1.5em;
-		height: 1.5em;
+		width: 2.25em;
+		height: 2em;
+		appearance: none;
+		box-shadow: none;
+		border-radius: none;
+		border: none;
+		background: transparent;
+		&:focus {
+			outline: none;
+		}
+		.menu-bar {
+			$bar-height: .25em;
+			display: block;
+			width: 100%;
+			height: $bar-height;
+			background: $black1;
+			position: relative;
+			transition: background 0s 0.3s;
+			&:before, &:after {
+				content: "";
+				@extend .menu-bar;
+				position: absolute;
+				transition-duration: 0.3s, 0.3s, 0.3s;
+				transition-delay: 0s, 0.3s, 0s;
+			}
+			&:before {
+				top: -$bar-height*2;
+				transition-property: background, top, transform;
+			}
+			&:after {
+				bottom: -$bar-height*2;
+				transition-property: background, bottom, transform;
+			}
+		}
+		&.active {
+			.menu-bar {
+				background: transparent;
+				&:before, &:after {
+					background: $white;
+					transition-delay: 0s, 0s, 0.3s;
+				}
+				&:before {
+					top: 0;
+					transform: rotate(45deg);
+				}
+				&:after {
+					bottom: 0;
+					transform: rotate(-45deg);
+				}
+			}
+		}
+	}
+	&.active {
+		background: transparent;
+		.logo {
+			background-position: 0 100%;
+		}
+	}
+}
+
+.menu-fs {
+	position: fixed;
+	z-index: 1000;
+	top: 0; left: 0;
+	width: 100%;
+	height: 100%;
+	background: $black1;
+	display: none;
+	.menu-options {
+		height: 100%;
+		position: absolute;
+		top: 0; left: 0;
+		z-index: -1;
+		background: $black2;
+		ul {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			box-sizing: border-box;
+			padding: 2em 0;
+			height: 100%;
+			max-height: 18em;
+			width: 15em;
+			font-family: $gothic;
+			font-size: 3em;
+			color: $green1;
+			a {
+				padding-left: 2em;
+			}
+			li:hover {
+				color: $black2;
+				background: $white;
+				cursor: pointer;
+			}
+		}
 	}
 }
 
