--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -19,13 +19,14 @@ header {
 	align-items: center;
 	padding: .5em 2em;
 	background: $white;
-	z-index: 1001;
 	* {
 		cursor: pointer;
+		z-index: 1001;
 	}
 	.logo {
 		@include logo-dimensions(7em);
 		transform: translateY(.05em);
+		transition: background-position 0s 0.5s;
 	}
 	.menu-launcher {
 		width: 2.25em;
@@ -84,6 +85,7 @@ header {
 		background: transparent;
 		.logo {
 			background-position: 0 100%;
+			transition-delay: 0s;
 		}
 	}
 }
@@ -91,17 +93,18 @@ header {
 .menu-fs {
 	position: fixed;
 	z-index: 1000;
-	top: 0; left: 0;
+	top: -100%; left: 0;
 	width: 100%;
 	height: 100%;
 	background: $black1;
-	display: none;
+	transition: top .25s ease-out .25s;
 	.menu-options {
 		height: 100%;
 		position: absolute;
-		top: 0; left: 0;
+		top: 0; left: -100%;
 		z-index: -1;
 		background: $black2;
+		transition: left .5s ease-out 0s;
 		ul {
 			display: flex;
 			flex-direction: column;
@@ -117,10 +120,31 @@ header {
 			a {
 				padding-left: 2em;
 			}
-			li:hover {
-				color: $black2;
-				background: $white;
-				cursor: pointer;
+			li {
+				opacity: 0;
+				transition: opacity ease-out .5s;
+				&:hover {
+					color: $black2;
+					background: $white;
+					cursor: pointer;
+				}
+			}
+		}
+	}
+	&.active {
+		top: 0;
+		transition-delay: 0s;
+		.menu-options {
+			left: 0;
+			transition-delay: .25s;
+			li {
+				opacity: 1;
+				$start-point: 0.75;
+				@for $i from 1 through 8 {
+					&:nth-child(#{$i}) {
+						transition-delay: $start-point + (($i / 10) / 1.5)+s;
+					}
+				}
 			}
 		}
 	}
