--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1,8 +1,8 @@
-#portada {
+#cover {
 	height: calc(100vh - 3em);//3em header height
 	background: url("../images/01.jpg") no-repeat;
 	background-size: 130%;
 	background-attachment: fixed;
 }
-#resumen {
+#abstract {
 }
