--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -1,209 +1,55 @@
+//## STRUCTURE ######
 html, body {
 	height: 100%;
 	background: $grey0;
 }
-
 body {
 	font-family: $osans;
 	display: flex;
 	flex-direction: column;
 }
-
 main {
 	flex: 1;
 }
+@import "header";
+@import "footer";
+@import "menu-fs";
 
-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: .5em 2em;
-	background: $white;
-	* {
-		cursor: pointer;
-		z-index: 1001;
-	}
-	.logo {
-		@include logo-dimensions(7em);
-		transform: translateY(.05em);
-		transition: background-position 0s 0.5s;
-	}
-	.menu-launcher {
-		width: 2.25em;
-		height: 2em;
-		appearance: none;
-		box-shadow: none;
-		border-radius: none;
-		border: none;
-		background: transparent;
-		&:focus {
-			outline: none;
-		}
-		.menu-bar {
-			$bar-height: .25em;
-			display: block;
-			width: 100%;
-			height: $bar-height;
-			background: $black1;
-			position: relative;
-			transition: background 0s 0.3s;
-			&:before, &:after {
-				content: "";
-				@extend .menu-bar;
-				position: absolute;
-				transition-duration: 0.3s, 0.3s, 0.3s;
-				transition-delay: 0s, 0.3s, 0s;
-			}
-			&:before {
-				top: -$bar-height*2;
-				transition-property: background, top, transform;
-			}
-			&:after {
-				bottom: -$bar-height*2;
-				transition-property: background, bottom, transform;
-			}
-		}
-		&.active {
-			.menu-bar {
-				background: transparent;
-				&:before, &:after {
-					background: $white;
-					transition-delay: 0s, 0s, 0.3s;
-				}
-				&:before {
-					top: 0;
-					transform: rotate(45deg);
-				}
-				&:after {
-					bottom: 0;
-					transform: rotate(-45deg);
-				}
-			}
-		}
-	}
-	&.active {
-		background: transparent;
-		.logo {
-			background-position: 0 100%;
-			transition-delay: 0s;
-		}
-	}
-}
-
-.menu-fs {
-	position: fixed;
-	z-index: 1000;
-	top: -100%; left: 0;
-	width: 100%;
-	height: 100%;
-	background: $black1;
-	transition: top .25s ease-out .25s;
-	.menu-options {
-		height: 100%;
-		position: absolute;
-		top: 0; left: -100%;
-		z-index: -1;
-		background: $black2;
-		transition: left .5s ease-out 0s;
-		ul {
-			display: flex;
-			flex-direction: column;
-			justify-content: space-around;
-			box-sizing: border-box;
-			padding: 2em 0;
-			height: 100%;
-			max-height: 18em;
-			width: 15em;
-			font-family: $gothic;
-			font-size: 3em;
-			color: $green1;
-			a {
-				padding-left: 2em;
-			}
-			li {
-				opacity: 0;
-				transition: opacity ease-out .5s;
-				&:hover {
-					color: $black2;
-					background: $white;
-					cursor: pointer;
-				}
-			}
-		}
-	}
-	&.active {
-		top: 0;
-		transition-delay: 0s;
-		.menu-options {
-			left: 0;
-			transition-delay: .25s;
-			li {
-				opacity: 1;
-				$start-point: 0.75;
-				@for $i from 1 through 8 {
-					&:nth-child(#{$i}) {
-						transition-delay: $start-point + (($i / 10) / 1.5)+s;
-					}
-				}
-			}
-		}
-	}
-}
-
-footer {
-	text-align: center;
-	font-size: .9em;
-	position: relative;
-	.go-top {
-		position: absolute;
-		top: -1.5em;
-		left: 50%;
-		transform: translateX(-50%);
-		background: url("../images/go-top.svg") no-repeat center;
-		width: 2.25em;
-		height: 2.25em;
-	}
-	.logo {
-		@include logo-dimensions(7.5em);
-		background-position: 0 100%;
-		display: block;
-		margin: auto;
-	}
-	address {
-		background: $black1;
-		color: $white;
-		padding: 1em;
-		line-height: 1.25em;
-		h4 {
-			font-weight: 600;
-			color: $green0;
-		}
-	}
-	.newsletter {
-		background: $white;
-		padding: .5em 1em 1em;
-		input {
-			padding: .25em .5em;
-			-webkit-appearance: none;
-			&[type="email"] {
-				background: $grey1;
-			}
-			&[type="submit"] {
-				background: $green0;
-				color: $white;
-				cursor: pointer;
-				&::-moz-focus-inner {
-					border: 0;
-				}
-				&:hover {
-					background: $green1;
-				}
-			}
-		}
-	}
-}
-
+//## GLOBAL ELEMENTS #######
 .logo {
 	background: url("../images/logo-original.svg");
 	background-size: 100% 200%;
+}
+h1, h2, h3 {
+	font-family: $osans-cnd;
+}
+.title {
+	font-size: 3em;
+	color: $black1;
+}
+.subtitle {
+	font-size: 2.25em;
+	color: $black1;
+}
+.underlined {
+	border-style: solid;
+	border-width: 0 0 .5em;
+	border-image: url("../images/pattern.svg") 0 9 120 fill round;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 .25em;
+	min-width: 14em;
+	&:after, &:before {
+		content: "";
+		flex: 1;
+		height: 0.045em;
+		background: $green1;
+	}
+	&:before {
+		margin-right: .25em;
+	}
+	&:after {
+		margin-left: .25em;
+	}
 }
