--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1,12 +1,17 @@
 #cover {
-	height: calc(100vh - 3em);//3em header height
-	max-height: 40em;
+	height: calc(100vh - 3em);
+	max-height: 50em;
 	background: url("../images/01.jpg") no-repeat;
 	background-size: 130%;
 	background-attachment: fixed;
+	z-index: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding-left: 2em;
 	.title {
-		font-size: 4em;
-		overflow: hidden;
+		font-size: 5em;
+		line-height: 1em;
 		span {
 			position:relative;
 			b {
@@ -22,6 +27,9 @@
 				}
 			}
 		}
+	}
+	.subtitle {
+		font-size: 3em;
 	}
 }
 #abstract {
