--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -33,15 +33,24 @@ h1, h2, h3 {
 	font-size: 2.25em;
 	color: $black1;
 }
+p {
+	text-indent: 1em;
+	line-height: 1.75em;
+	text-align: justify;
+	margin-bottom: 1em;
+	max-width: 50em;
+}
 .underlined {
 	border-style: solid;
 	border-width: 0 0 .5em;
-	border-image: url("../images/pattern.svg") 0 9 120 fill round;
+	border-image: url("../images/pattern.png") 50 20 round;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
 	padding: 0 .25em;
-	min-width: 14em;
+	width: 100%;
+	max-width: 15em;
+	margin-bottom: .5em;
 	&:after, &:before {
 		content: "";
 		flex: 1;
