--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -32,25 +32,28 @@
 		font-size: 3em;
 	}
 }
-#abstract ul {
-	display: flex;
-	justify-content: space-between;
-	max-width: 50em;
-	margin: auto;
-	text-align: center;
-	li {
-		width: 13em;
-		margin: 2em 1em;
-		&:before {
-			content: "";
-			width: 100%;
-			height: 6em;
-			display: block;
-			margin-bottom: 1em;
-		}
-		@for $i from 1 through 3 {
-			&:nth-child(#{$i}):before {
-				background: url("../images/abs0"+$i+".svg") no-repeat center;
+#abstract {
+	background: $white;
+	ul {
+		display: flex;
+		justify-content: space-between;
+		max-width: 42em;
+		margin: auto;
+		text-align: center;
+		li {
+			width: 13em;
+			margin: 4em 1em;
+			&:before {
+				content: "";
+				width: 100%;
+				height: 6em;
+				display: block;
+				margin-bottom: 1em;
+			}
+			@for $i from 1 through 3 {
+				&:nth-child(#{$i}):before {
+					background: url("../images/abs0"+$i+".svg") no-repeat center;
+				}
 			}
 		}
 	}
