--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -2,6 +2,12 @@ footer {
 	text-align: center;
 	font-size: .9em;
 	position: relative;
+	p {
+		text-indent: 0;
+		text-align: center;
+		max-width: none;
+		line-height: normal;
+	}
 	.go-top {
 		position: absolute;
 		top: -1.5em;
