--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -2,3 +2,12 @@
 	width: $logo-width;
 	height: $logo-width * 31.92 / 100;
 }
+@mixin transparent-layer($color, $opacity) {
+	content: "";
+	position: absolute;
+	top: 0; left: 0;
+	width: 100%;
+	height: 100%;
+	background: $color;
+	opacity: $opacity;
+}
