--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,4 +2,5 @@
 <link type="text/css" rel="stylesheet" href="/assets/stylesheets/application.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,600|Pathway+Gothic+One" rel="stylesheet">
 <script type="text/javascript" src="assets/scripts/jquery-3.1.1.min.js"></script>
+<script src="assets/scripts/jarallax.min.js"></script>
 <script type="text/javascript" src="assets/scripts/scripts.js"></script>
