--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		<h4>Sociedad Profesional de Psicología</h4>
 		<p>C/ María de Guzmán, 61, 28003, Madrid.</p>
 		<p>info@psiconueve.es</p>
-		<p>695 642 851</p>
+		<p class="tel">695 642 851 <span>disponible 24/7</span></p>
 	</address>
 	<div class="newsletter">
 		<h4>Subscríbete a nuestro newsletter!</h4>
