--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -10,12 +10,20 @@ footer {
 	}
 	.go-top {
 		position: absolute;
-		top: -1.5em;
+		top: -2em;
 		left: 50%;
 		transform: translateX(-50%);
 		background: url("../images/go-top.svg") no-repeat center;
-		width: 2.25em;
-		height: 2.25em;
+		background-size: 100% 200%;
+		background-position: 0 0;
+		width: 2.5em;
+		height: 2.75em;
+		cursor: pointer;
+		&:hover {
+			background-position: 0 100%;
+			animation: bounce 1s both;
+			transform-origin: center bottom;
+		}
 	}
 	.logo {
 		@include logo-dimensions(7.5em);
@@ -31,6 +39,21 @@ footer {
 		h4 {
 			font-weight: 600;
 			color: $green0;
+		}
+		.tel {
+			font-size: 1.1em;
+			&:before {
+				content: "";
+				width: 1.3em;
+				height: 1.3em;
+				background: url("../images/telefono.svg") no-repeat center;
+				display: inline-block;
+				vertical-align: middle;
+				margin: -.3em .5em 0 0;
+			}
+			span {
+				color: $green0;
+			}
 		}
 	}
 	.newsletter {
