Arreglos de la interacción: reposicionamiento del menu hamburguesa redimensionado del newsletter solución al descuadre del text rotator

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -64,11 +64,13 @@ footer {
 			-webkit-appearance: none;
 			&[type="email"] {
 				background: $grey1;
+				width: 16em;
 			}
 			&[type="submit"] {
 				background: $green0;
 				color: $white;
 				cursor: pointer;
+				width: 4em;
 				&::-moz-focus-inner {
 					border: 0;
 				}
