--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -11,7 +11,7 @@
 		font-size: 5em;
 		line-height: 1em;
 		span {
-			position:relative;
+			// position:relative;
 			b {
 				color: $green1;
 				position: absolute;
