Navegación con liquid

--- a/_sass/_menu-fs.scss
+++ b/_sass/_menu-fs.scss
@@ -53,6 +53,12 @@
 						transition-delay: $start-point + (($i / 10) / 1.5)+s;
 					}
 				}
+				&.active {
+					color: $white;
+					&:hover {
+						color: $black2;
+					}
+				}
 			}
 		}
 	}
