--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,14 @@
 <div class="menu-fs">
 	<nav class="menu-options">
 		<ul>
-			<li><a href="/nuestra_filosofia.html">Nuestra Filosofía</a></li>
-			<li><a href="/areas_intervencion.html">Áreas de Intervención</a></li>
-			<li><a href="/metodologia.html">Metodología</a></li>
-			<li><a href="/quienes_somos.html">Quiénes Somos</a></li>
-			<li><a href="/servicios.html">Servicios</a></li>
-			<li><a href="/cursos_talleres.html">Cursos y Talleres</a></li>
-			<li><a href="/preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
-			<li><a href="/contacto.html">Contacto</a></li>
+			{% assign nav_menu = site.html_pages | sort:"nav" %}
+			{% for i in nav_menu %}
+				{% if i.nav %}
+					<li {% if i.url == page.url %}class="active"{%  endif %}>
+						<a href="{{ site.baseurl }}{{ i.url }}">{{ i.title }}</a>
+					</li>
+				{% endif %}
+			{% endfor %}
 		</ul>
 	</nav>
 </div>
