--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@ layout: compress
 	<body>
 		{% include header.html %}
 		<main>
+			{% if page.url != "/" %}
+				{% include cover.html %}
+			{% endif %}
 			{{ content }}
 		</main>
 		{% include footer.html %}
