--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -11,6 +11,9 @@ body.no-scroll{
 	position: fixed;
 	overflow-y: scroll;
 }
+main {
+	text-align: center;
+}
 @import "header";
 @import "footer";
 @import "menu-fs";
@@ -37,6 +40,13 @@ p {
 	text-align: justify;
 	max-width: 50em;
 }
+main p + p {
+	margin-top: 1em;
+}
+.intro {
+	padding: 6em 2em;
+	display: inline-block;
+}
 .underlined {
 	border-style: solid;
 	border-width: 0 0 .5em;
@@ -62,7 +72,7 @@ p {
 	}
 }
 
-//PARALLAX ELEMENTS
+//## PARALLAX ELEMENTS #######
 .jarallax {
 	position: relative;
 	background-size: cover;
@@ -94,5 +104,54 @@ p {
 		&.nav0#{$i} {
 			background-image: url("../images/0#{$i}.jpg");
 		}
+	}
+}
+
+//## CARDS #######
+.card {
+	position: relative;
+	margin: 2em 0;
+	.text-wrapper {
+		max-width: 75em;
+		margin: auto;
+		padding: 0 4em;
+	}
+	.content {
+		position: relative;
+		display: inline-block;
+		text-align: center;
+		max-width: 32em;
+		padding: 3em 4em 5em;
+		margin-bottom: 10em;
+		&.exception {
+			margin-bottom: 6em;
+		}
+		.title {
+			margin-bottom: .75em;
+			line-height: 1em;
+		}
+		&:before {
+			@include transparent-layer($grey1, .75);
+			z-index: -1;
+		}
+	}
+	&:nth-child(odd), &.inverse:nth-child(even) {
+		text-align: right;
+	}
+	&:nth-child(even), &.inverse:nth-child(odd) {
+		text-align: left;
+	}
+	&:before {
+		@include layer;
+		z-index: -1;
+		background-size: cover;
+		max-height: 50em;
+		top: 6.5em;
+	}
+}
+@for $i from 1 through 4 {
+	#areas .card:nth-child(#{$i}):before {
+		$img: 10 + $i;
+		background-image: url("../images/#{$img}.jpg")
 	}
 }
