--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -2,6 +2,7 @@ footer {
 	text-align: center;
 	font-size: .9em;
 	position: relative;
+	z-index: 2;
 	p {
 		text-indent: 0;
 		text-align: center;
