--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -140,7 +140,7 @@ main p + p, li p {
 	position: relative;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: 50% 50%;
+	background-position: 50% 0;
 	z-index: 1;
 }
 .cover {
