--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -30,6 +30,10 @@
 	.subtitle {
 		font-size: 3em;
 	}
+	//IE EDGE
+	&.jarallax {
+		background-position: 50% 30%;
+	}
 }
 #abstract {
 	background: $white;
