Solución al problema de las mayúsculas

--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,6 +1,6 @@
 <section class="cover nav0{{ page.nav }} jarallax">
 	<div class="text-wrapper">
-		<h1 class="title underlined">{{ page.title | upcase }}</h1>
+		<h1 class="title underlined">{{ page.title }}</h1>
 		<h2 class="subtitle">{{ page.subtitle }}</h2>
 	</div>
 </section>
