--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -151,6 +151,7 @@ main p + p, li p {
 		padding: 1em .5em;
 		.title {
 			color: $white;
+			text-transform: uppercase;
 		}
 		.subtitle {
 			color: $white;
