--- a/_sass/_menu-fs.scss
+++ b/_sass/_menu-fs.scss
@@ -1,4 +1,4 @@
-.menu-fs {
+#menu-fs {
 	position: fixed;
 	z-index: 1000;
 	top: -100%; left: 0;
@@ -6,7 +6,7 @@
 	height: 100%;
 	background: $black1;
 	transition: top .25s ease-out .25s;
-	.menu-options {
+	#menu-options {
 		height: 100%;
 		position: absolute;
 		top: 0; left: -100%;
@@ -42,7 +42,7 @@
 	&.active {
 		top: 0;
 		transition-delay: 0s;
-		.menu-options {
+		#menu-options {
 			left: 0;
 			transition-delay: .25s;
 			li {
@@ -60,6 +60,46 @@
 					}
 				}
 			}
+		}
+	}
+	#quotes {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		text-align: right;
+		font-size: 1.1em;
+		opacity: 0;
+		transition: opacity 1s 1.6s;
+		z-index: -2;
+		li {
+			max-width: 40%;
+			position: absolute;
+			right: 4em;
+			top: 50%;
+			transform: translateY(-50%);
+			opacity: 0;
+			transition: opacity 1s;
+			p {
+				text-align: right;
+				&:first-child {
+					font-style: italic;
+					color: $quote0;
+				}
+				&:last-child {
+					color: $quote1;
+					margin-top: 0;
+				}
+			}
+			&:before {
+				@include iconbkg(6em, -2em, 0, -3em, "quote");
+			}
+			&.visible {
+				opacity: 1;
+				transition: opacity 1s;
+			}
+		}
+		&.active {
+			opacity: 1;
 		}
 	}
 }
