Formspree y ajax para el formulario

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -11,6 +11,9 @@ body.no-scroll{
 	position: fixed;
 	overflow-y: scroll;
 }
+body.no-scroll-modal {
+	overflow-y: hidden;
+}
 main {
 	text-align: center;
 }
