--- a/_sass/sections.scss
+++ b/_sass/sections.scss
@@ -352,4 +352,37 @@
 			text-align: right;
 		}
 	}
+	#form-popups {
+		position: fixed;
+		top: 0; left: 0;
+		z-index: 1000;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		&:before {
+			@include transparent-layer($grey0, .8);
+			z-index: -1;
+		}
+		.cssload-thecube {
+			margin-top: -2em;
+		}
+	}
+	.alert {
+		padding: 2em 4em;
+		margin: 1em;
+		background: $white;
+		margin-top: -2em;
+		border: 0.125em solid ;
+		&.success {
+			color: $green1;
+			border-color: $green1;
+		}
+		&.error {
+			color: red;
+			border-color: red;
+		}
+	}
 }
