--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: compress
 	<body>
 		{% include header.html %}
 		<main>
-			{% if page.url != "/" %}
+			{% if page.url != "/index.html" %}
 				{% include cover.html %}
 			{% endif %}
 			{{ content }}
