Arreglado error en nombre de archivo para prueba

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/scripts.js"></script>
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/map.js"></script>
 {% if jekyll.environment == "development" %}
-	<script type="text/javascript" src="/assets/scripts/map.js"></script>
+	<script type="text/javascript" src="/assets/scripts/reload.js"></script>
 {% endif %}
