Arreglos para entrega

--- a/_sass/_menu-fs.scss
+++ b/_sass/_menu-fs.scss
@@ -22,7 +22,7 @@
 			max-height: 18em;
 			width: 15em;
 			font-family: $gothic;
-			font-size: 3em;
+			font-size: 3.2em;
 			color: $green1;
 			a {
 				padding-left: 2em;
@@ -68,7 +68,7 @@
 		li {
 			max-width: 40%;
 			position: absolute;
-			right: 4em;
+			right: 3vw;
 			top: 50%;
 			transform: translateY(-50%);
 			opacity: 0;
