--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <meta charset="utf-8">
+<title>PsicoNueve</title>
 <link type="text/css" rel="stylesheet" href="{{ site.github.url }}/assets/stylesheets/application.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,600|Pathway+Gothic+One" rel="stylesheet">
+{% include favicon.html %}
 <script src='https://maps.googleapis.com/maps/api/js?key={{ site.gmapi }}&sensor=false&extension=.js'></script>
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/jquery.easing.1.3.js"></script>
