--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>PsicoNueve</title>
 <link type="text/css" rel="stylesheet" href="{{ site.github.url }}/assets/stylesheets/application.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,600|Pathway+Gothic+One" rel="stylesheet">
