--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -156,12 +156,13 @@ main p + p, li p {
 		.title {
 			color: $white;
 			text-transform: uppercase;
+			margin-bottom: 0;
 		}
 		.subtitle {
 			color: $white;
 			font-family: $osans;
 			font-size: 1.5em;
-			transform: translateY(-50%);
+			padding: .25em 0 .75em;
 		}
 		&:before {
 			@include transparent-layer($black2, .6);
