Detección de navegadores mobile y script para evitar resize de index cover

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header id="main-header">
 	<a href="/" class="logo"></a>
 	<button class="menu-launcher">
 		<span class="menu-bar"></span>
