--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/jquery.easing.1.3.js"></script>
 <script src="{{ site.github.url }}/assets/scripts/jarallax.min.js"></script>
+<script src="{{ site.github.url }}/assets/scripts/mobile-detect.min.js"></script>
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/scripts.js"></script>
 <script type="text/javascript" src="{{ site.github.url }}/assets/scripts/map.js"></script>
 {% if jekyll.environment == "development" %}
