--- a/_sass/queries.scss
+++ b/_sass/queries.scss
@@ -61,6 +61,9 @@
 			font-size: 2.5em;
 			max-width: 12em;
 		}
+		&.jarallax {
+			background-position: 90% 30%;
+		}
 	}
 }
 @media (max-width: 768px) {
@@ -72,6 +75,7 @@
 		background-position: right;
 		.title {
 			font-size: 3.3em;
+			max-width: 6em;
 		}
 		.subtitle {
 			font-size: 2em;
