--- a/_sass/queries.scss
+++ b/_sass/queries.scss
@@ -46,6 +46,14 @@
 		}
 	}
 }
+@media (max-width: 1280px) {
+	#index-cover {
+		justify-content: flex-end;
+		.subtitle {
+			padding-bottom: 20%;
+		}
+	}
+}
 @media (max-width: 960px) {
 	.cover.nav05 {
 		background-image: url("../images/05c.jpg");
@@ -62,7 +70,7 @@
 			max-width: 12em;
 		}
 		&.jarallax {
-			background-position: 90% 30%;
+			background-position: 87% 70%;
 		}
 	}
 }
@@ -74,11 +82,10 @@
 		padding: 0 $mobile-padding;
 		background-position: right;
 		.title {
-			font-size: 3.3em;
-			max-width: 6em;
+			max-width: 7em;
 		}
 		.subtitle {
-			font-size: 2em;
+			padding-bottom: $mobile-padding;
 		}
 	}
 }
@@ -86,8 +93,19 @@
 	.cover .text-wrapper .subtitle {
 		font-size: 3.8vw;
 	}
+	#index-cover {
+		.title {
+			font-size: 3.3em;
+		}
+		.subtitle {
+			font-size: 2em;
+		}
+	}
 }
 @media (max-width: 480px) {
+	#index-cover.jarallax {
+		background-size: 300%;
+	}
 	.cover .text-wrapper {
 		.title {
 			font-size: 1.9em;
@@ -102,11 +120,38 @@
 }
 
 //## MENU-FS #######
-@media (max-width: 1600px) {
+@media (max-width: 1600px) and (max-height: 860px) {
+	#menu-fs #menu-options ul {
+		font-size: 6vh;
+	}
+}
+@media (max-width: 960px) {
+	#quotes {
+		display: none;
+	}
 	#menu-fs {
 		#menu-options {
-			ul {
-				font-size: 6vh;
+			width: 100%;
+			top: -100%;
+			left: 0;
+			transition: top .5s ease-out .35s;
+			ul li {
+				transition: opacity ease-out .25s 0s;
+				&:hover {
+					background: transparent;
+					color: $white;
+				}
+			}
+		}
+		&.active #menu-options {
+			transition-delay: .35s;
+			top: 0;
+			li {
+				opacity: 1;
+				transition: opacity ease-out .5s;
+				&.active:hover {
+					color: $white;
+				}
 			}
 		}
 	}
